--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 	<!--Site preloader-->
 	<div class="vlt-site-preloader" data-animate-to="M0 0h202v66H0z">
-        <img src="assets/img/root/logo-black.png" alt="">
+        <img src="assets/img/logo-black-2.gif" alt="">
 	</div>
 	<!--Header-->
 	<div class="d-none d-lg-block">
@@ -369,7 +369,7 @@
 					</div>
 				</div>
 
-                <img style="display:block ; margin: auto; width: 100%;" src="assets/img/single-work-title-02.png" alt="">
+                <img style="display:block ; margin: auto; width: 100%;" src="assets/img/parts.gif" alt="">
 				
 					
 
